--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 #hero {
-    background: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%,rgba(16, 16, 16, 0) 100%),url("../assets/hero-bg.png");
+    background: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%, rgba(16, 16, 16, 0) 100%), url("../assets/hero-bg.png");
     height: 615px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,6 +32,7 @@
     line-height: 38px;
     letter-spacing: 0%;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 #hero .hero-content .title {
@@ -42,15 +43,34 @@
     line-height: 80px;
     letter-spacing: 0%;
     text-align: center;
+    margin-bottom: 14px;
 }
-#hero .hero-content .description{
-    color: rgb(255, 255, 255);
-font-family: Work Sans;
-font-size: 10px;
-font-weight: 500;
-line-height: 28px;
-letter-spacing: 0%;
-text-align: center;
-opacity: 0.7;
 
+#hero .hero-content .description {
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    margin-bottom: 32px;
+}
+
+.btn {
+    padding: 14px 18px 14px 18px;
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 16px;
+    letter-spacing: 0%;
+    text-align: center;
+    background: rgb(82, 195, 3);
+    border-radius: 5px;
+    border: none;
+}
+.btn-container{
+    text-align: center;
 }
