--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 #hero {
-    background: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%, rgba(16, 16, 16, 0) 100%), url("../assets/hero-bg.png");
+    background: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%, rgba(16, 16, 16, 0) 100%), url("assets/hero-bg.png");
     height: 615px;
     background-repeat: no-repeat;
     background-size: cover;
